two section added

--- a/index.html
+++ b/index.html
@@ -1,15 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ridu Protfolio</title>
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
+
     <!-- Css Links -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="name">Weird Hasan</span> World</h1>
+            <h3>He is Wierd and Greedy</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi aspernatur minus maxime nam. Veniam
+                architecto
+                maiores error explicabo quidem animi, ipsam saepe porro ex, illo aspernatur, nobis amet veritatis
+                similique?
+            </p>
+            <a id="hire_me" href="https://www.linkedin.com/in/iam-hasibulhasan/" target="_blank">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/ridu-bg.png" target=alt="">
+        </div>
+    </section>
+
+    <section class="dream-wired">
+        <div class="half-width">
+            <img src="images/ridu-bg-2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Wired Dream</h1>
+            <h3>Try To Be A Wired Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus nihil pariatur eius, laudantium
+                obcaecati consequatur vel molestiae tempore nobis aperiam culpa. Ipsam asperiores optio sed eveniet
+                natus consequuntur reiciendis expedita.</p>
+            <a id="resume" target="_blank" href="#">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
+
 </html>
