--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexiable">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="name">Weird Hasan</span> World</h1>
+            <h1><span class="orange">Weird Hasan</span> World</h1>
             <h3>He is Wierd and Greedy</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi aspernatur minus maxime nam. Veniam
                 architecto
@@ -34,7 +34,7 @@
         </div>
     </section>
 
-    <section class="dream-wired">
+    <section class="dream-wired flexiable">
         <div class="half-width">
             <img src="images/ridu-bg-2.png" alt="">
         </div>
@@ -47,6 +47,36 @@
             <a id="resume" target="_blank" href="#">DOWNLOAD RESUME</a>
         </div>
     </section>
+
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexiable">
+            <div class="experience-item" id="full-dev">
+                <h2>Full Stack Developer</h2>
+                <h3 class="orange">2021-Present | Pro Level Developer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae quo dolorum adipisci dicta rem,
+                    maiores asperiores facilis? Incidunt temporibus iusto fugiat eum. Iste dolorum ratione quaerat eum
+                    alias, deserunt odit a quae facilis magni ipsam voluptates dolores nihil cupiditate quos saepe, ea
+                    tempore amet asperiores assumenda! In minima quia, ducimus voluptates repellat commodi cupiditate
+                    veritatis sed ab ea tempore, odit exercitationem dicta quasi fugiat dolorem reiciendis deserunt
+                    magni? Cumque, eum.</p>
+            </div>
+            <div class="experience-item" id="baby-dev">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange">2020-2021 | Programming Hero Learner</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae quo dolorum adipisci dicta rem,
+                    maiores asperiores facilis? Incidunt temporibus iusto fugiat eum. Iste dolorum ratione quaerat eum
+                    alias, deserunt odit a quae facilis magni ipsam voluptates dolores nihil cupiditate quos saepe, ea
+                    tempore amet asperiores assumenda! In minima quia, ducimus voluptates repellat commodi cupiditate
+                    veritatis sed ab ea tempore, odit exercitationem dicta quasi fugiat dolorem reiciendis deserunt
+                    magni? Cumque, eum.</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>© Hasibul Hasan 2021, a Wierd initiative.</p>
+    </footer>
 </body>
 
 </html>
